# opencv-cpp-learning

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  app  cmake_install.cmake  demo  gradients  hist_eq
src/: demo.cpp  gradients.cpp  hist_eq.cpp  main.cpp
